--- a/RankFit/Exercise/ExerciseList/saveExercise/saveExercise.storyboard
+++ b/RankFit/Exercise/ExerciseList/saveExercise/saveExercise.storyboard
@@ -39,7 +39,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="2Vo-yf-PJd"/>
                                             <constraint firstAttribute="trailing" secondItem="JuA-b8-4ok" secondAttribute="trailing" constant="8" id="7Vu-e2-DuZ"/>
@@ -57,7 +57,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="38K-0y-HQE" firstAttribute="centerY" secondItem="ugf-qL-4zb" secondAttribute="centerY" id="34g-bg-GaO"/>
                                             <constraint firstItem="38K-0y-HQE" firstAttribute="centerX" secondItem="ugf-qL-4zb" secondAttribute="centerX" id="QuD-Zg-wHx"/>
@@ -86,7 +86,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="115" id="386-tV-qez"/>
                                                     <constraint firstItem="k1f-c0-90H" firstAttribute="centerY" secondItem="DAD-G2-fNz" secondAttribute="centerY" id="nal-LC-xtD"/>
@@ -114,7 +114,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstItem="L5E-Bc-VHQ" firstAttribute="centerX" secondItem="19Y-e5-mul" secondAttribute="centerX" constant="-70" id="3aL-Pl-TPG"/>
                                                     <constraint firstAttribute="height" constant="115" id="AJv-YY-yor"/>
@@ -142,7 +142,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstItem="2QA-9p-3lY" firstAttribute="centerY" secondItem="bwG-GN-rXC" secondAttribute="centerY" id="UTf-IA-4Ye"/>
                                                     <constraint firstItem="5oo-gi-Jrc" firstAttribute="centerY" secondItem="bwG-GN-rXC" secondAttribute="centerY" id="ixL-BN-cy4"/>
@@ -170,7 +170,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="e4I-WE-loI" firstAttribute="centerX" secondItem="8kd-Sy-LKR" secondAttribute="centerX" id="GmP-7L-2Tu"/>
                                             <constraint firstItem="e4I-WE-loI" firstAttribute="leading" secondItem="8kd-Sy-LKR" secondAttribute="leading" constant="30" id="hBc-SP-aRK"/>
@@ -182,7 +182,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="np9-LA-TVX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="A1c-6O-3cF"/>
                             <constraint firstItem="np9-LA-TVX" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="alW-hx-r1k"/>
@@ -232,7 +232,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="QMp-oG-W5S" firstAttribute="top" secondItem="dqI-LN-3ng" secondAttribute="top" constant="10" id="3yT-9F-A8c"/>
                                             <constraint firstAttribute="trailing" secondItem="QMp-oG-W5S" secondAttribute="trailing" constant="8" id="CgF-bV-Xbf"/>
@@ -250,7 +250,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="120" id="2Lc-vC-VEp"/>
                                             <constraint firstItem="LCD-Ph-G2Z" firstAttribute="centerX" secondItem="p4P-cF-bar" secondAttribute="centerX" id="qyc-Wi-CPG"/>
@@ -279,7 +279,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstItem="6Df-B5-Vo5" firstAttribute="centerX" secondItem="axq-XZ-QSb" secondAttribute="centerX" constant="70" id="SSL-ja-WNs"/>
                                                     <constraint firstItem="6Df-B5-Vo5" firstAttribute="centerY" secondItem="axq-XZ-QSb" secondAttribute="centerY" id="Tge-ms-vtI"/>
@@ -322,7 +322,7 @@
                                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                     </textField>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstItem="df6-UT-B8j" firstAttribute="centerY" secondItem="RYl-5S-7vP" secondAttribute="centerY" id="BKW-eW-dti"/>
                                                     <constraint firstItem="eFr-aC-5DY" firstAttribute="leading" secondItem="PJY-vU-Dez" secondAttribute="trailing" constant="10" id="SGa-bR-Zd2"/>
@@ -354,7 +354,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="RHg-sK-21e" firstAttribute="leading" secondItem="K0U-EX-b98" secondAttribute="leading" constant="30" id="Dyz-ZG-Jek"/>
                                             <constraint firstItem="RHg-sK-21e" firstAttribute="centerY" secondItem="K0U-EX-b98" secondAttribute="centerY" id="YUY-a9-mna"/>
@@ -366,7 +366,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="dox-P4-wj4"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="dox-P4-wj4" firstAttribute="bottom" secondItem="xUc-Wz-l6w" secondAttribute="bottom" id="VUe-7t-wRI"/>
                             <constraint firstItem="xUc-Wz-l6w" firstAttribute="leading" secondItem="dox-P4-wj4" secondAttribute="leading" id="Wge-ds-yjt"/>
@@ -392,8 +392,8 @@
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
